dev/registry/resources/registry-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
  namespace: registry
  labels:
    app.kubernetes.io/name: registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: registry-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: joxit/docker-registry-ui:latest
          ports:
            - containerPort: 80
