dev/registry/resources/registry-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry-ui-route
  namespace: registry
  annotations:
    external-dns.alpha.kubernetes.io/target: "178.104.84.100"
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - registry-ui-dev.easysolution.work
  rules:
    - backendRefs:
        - name: registry-ui
          port: 80
